button alignment solved, @media 424px added

--- a/styles.css
+++ b/styles.css
@@ -386,6 +386,12 @@ input {
   }
 }
 
+@media (max-width: 424px) {
+  .p-320 {
+    padding: 0;
+  }
+}
+
 @media (max-width: 425px) {
   .textarea-properties {
     width: 80%;
